[package]
name = "railcar"
version = "1.0.4"
authors = ["Vishvananda Ishaya Abrams <vish.ishaya@oracle.com>"]
build = "build.rs"

[dependencies]
caps = "0.2.0"
clap = "2.24.1"
error-chain = "0.10.0"
lazy_static = "^1.1.0"
libc = "0.2.21"
log = {version = "0.4.3", features = ["release_max_level_info"] }
nix = "0.11.0"
num-traits = "^0.2.5"
oci = { path = "oci" }
prctl = "1.0.0"
scopeguard = "^0.3.3"
seccomp-sys = "0.1.2"

[features]
nightly = []

[profile.release]
lto = true
panic = 'abort'
